--- a/aula10/style.css
+++ b/aula10/style.css
@@ -1,63 +1,178 @@
-h1{
-  font-size:20px;
-  text-align:center;
-  font-weight: bold; 		
-}
-footer{
-text-align:center;
-font-size:12px;
-font-style:italic;
-}
-img{
-width: 320x;
-height:205px;
-right:100px;
+		.carlinhos{
+			background-color: #8611add6;
+		}
 
-}
-header{
-	text-align: center;
-	align-items: center;
-	justify-content: center;
-	background-image: linear-gradient(to right, blue, red);
-}
-body{
-	background-color: rgba(63, 24, 235, 0.418);
-}
-main{
-	display: flex;
-	margin-top: 10px;
-}
-          #blocos{
-		background-color: rgb(221, 36, 221);
-		justify-content: center;
-		height: 50vh;
-		width: 80%;
-	}
-	#article1{
-		margin: 10px 10px 10px 10px;;
-		background-color: rgb(255, 117, 248);
-		width: 98%;
-		height: 45%;
-	}
-	#article2{
-		background-color: rgb(244, 159, 255);
-		margin: 10px 10px 10px 10px;
-		width: 98%;
-		height: 45%;
-	}
-	#aside1{
-		background-color: #f168c8c5;
-		width: 100px;
-		height: 70%;
-		margin-left: 87%;
-	}
-	#aside2{
-		background-color: #e431eb;
-		margin-left: 10px;
-		width: 18%;
-		height: 50vh;
-	}
-	#nav{
-				background-color: rgb(255, 37, 201);
-				box-shadow: 7px 7px 9px 0px black;
-	}
+		ul{
+			text-align: center;
+			align-items: center;
+		}
+		body{
+			background-color: #040708c9;
+		}
+
+
+
+		.subuxa{
+			width: 70%;
+
+
+		}
+
+
+
+		section{
+			background-color: #8611add6;
+			position: absolut;
+			text-color: #f9f6fad6;
+		}
+		#devj{
+
+			font-size: 12px;
+			text-align: center;
+			font-style: italic;
+			text-color: white;
+			
+			
+			
+			
+		}
+		#ceemti{
+
+			background: -webkit-gradient(linear, left top, right top, from(#faa3a3), to(#ff0000)) no-repeat;
+            		background: -moz-linear-gradient(left, #faa3a3, #ff0000);
+            		filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, StartColorStr='#ff0000', EndColorStr='#faa3a3');            
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			pading: 2px;
+			
+		}
+		main{
+			max-width: 75%;
+			justify-content: auto;
+			align-items: auto;
+			text-align: center;
+			pading: 2px;
+			position: absolut;
+			
+						
+		}
+
+		.Aula{
+			font-size: 16px;
+			text-align: center;
+			font-weight: bold;
+			align-items: center;
+			text-align: center;
+		}
+		.materia{
+
+			font-size: 16px;
+			text-align: center;
+			font-weight: bold;
+			text-color: white;
+			
+		}
+
+		header{
+            		background: -webkit-gradient(linear, left top, right top, from(#faa3a3), to(#ff0000)) no-repeat;
+            		background: -moz-linear-gradient(left, #ff0000, #faa3a3);
+            		filter:progid:DXImageTransform.Microsoft.Gradient(GradientType=1, StartColorStr='#ff0000', EndColorStr='#faa3a3');            
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			pading: 2px;
+		}
+
+		#Progwebparwebdesign{
+
+			background-color: #8611add6;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			pading: 2px;
+			margin: 0 auto;
+			max-width: 95%;
+			text-color: white;
+			
+			
+		}
+		#Desenvdegames{
+
+			background-color: #8611add6;  
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			pading: 2px;
+			margin: 0 auto;
+			width: 50%;
+			text-color: white;
+			
+			
+			
+		}
+		#Analprogdesis{
+			
+			background-color: #8611add6;
+			justify-content: center;
+			align-items: center;
+			text-align: center;
+			pading: 2px;
+			margin: 0 auto;
+			max-width: 95%;
+			text-color: white;
+			
+		}
+
+		#Nasa{
+	    
+			display: flex;
+			background-color: #0667ebd6;
+			box-shadow: 7px 7px 9px 0px black;
+			font-weight: bold;
+			font-size: 20px;
+			text-align: center; 
+			justify-content: center;
+			pading: 15px;
+			
+		        
+		}
+
+		.nome{
+			font-weight: bold;
+			font-size: 20px;
+			text-align: center;
+			align-items: center;
+		}
+
+		#pezin{
+
+		    	background-color: #06c6eb;
+			width: 100%;
+       			text-color: #f9f6fad6;
+        
+		}
+			@media screen and (max-width: 1200px){
+				img{
+		                	width: 400px;
+		                	height: 400px;
+		                	}
+		            }
+			@media screen and (max-width: 760px){
+		                img{
+		                	width: 400px;
+		                	height: 400px;
+		                	}
+		            }
+			@media screen and (max-width: 200px){
+		                img{
+		                	width: 300px;
+		                	height: 300px;
+		                	}
+		            }
+			@media screen and (max-width: 100px){
+		                img{
+		                	width: 200px;
+		                	height: 200px;
+		                	}
+		            }
